# sentryx

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
assets/: dashboard.css  font.css  login.css  main.css  server.css  sidebar.css
assets/styles/: dashboard.css  font.css  light.css  server.css  settings.css  sidebar.css  theme.css
public/: map_style.json
sentryx/: servers.json  sessions.json  users.json
src/: cookie.rs  dashboard.rs  login.rs  main.rs  settings.rs  utils.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: data.ts  route.ts
src/app/api/auth/: auth.ts  route.ts
src/app/api/server/: route.ts
src/app/api/server-usage/: route.ts
src/app/api/servers/: route.ts  servers.ts
src/app/dashboard/: Summary.tsx  SummaryCard.tsx  chart.tsx  page.tsx  server.tsx
src/app/login/: page.tsx
src/app/servers/: LocationSelect.tsx  Map.tsx  NewServerDialog.tsx  page.tsx
src/app/servers/[server]/: page.tsx  service.tsx
src/backend/: auth.rs  mod.rs
src/components/: AppLayout.tsx  AppSidebar.tsx  mod.rs  server.rs  sidebar.rs
src/components/ui/: sidebar.tsx
src/hooks/: getSession.ts  useSession.ts
src/lib/: session.ts
src/types/: server.ts  service.ts
