[package]
name = "sentryx"
version = "0.1.0"
authors = ["Leo dev <klesti.selimay@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
js-sys = "0.3.77"
lucide-dioxus = { version = "2.15.0", features = ["all-icons"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
serde = { version = "1.0.61", features = ["derive"]}
mongodb = {version = "3.2.4", optional = true}
features = "0.10.0"
futures-util = "0.3.31"
regex = "1.11.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:mongodb"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
